# CognitiveMemoryLayer

./: .dockerignore  .env.example  .env.minimal  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  REPORT.md  SECURITY.md  alembic.ini  check_db_timestamps.py  conftest.py  debug_neo4j.py  eval_debug_log.txt  full_cov.json  full_repo_cov.json  full_repo_cov_mock.json  hatch_build.py  models.json  mypy_output.txt  pyproject.toml  requirements-docker.txt  requirements-runtime.txt  requirements-test.txt  scratch_eval.py  test_admin_failures.txt  test_api_ingestion.py  test_api_read.py  test_crash.py  test_extract.py  test_llm.py  test_llm_openai.py  test_llm_out.txt  test_output.txt  test_timestamp_ingestion.py  test_workflow.py  unit_coverage.json
.git.corrupt/: COMMIT_EDITMSG  ORIG_HEAD  config  packed-refs
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  py-cml-lint.yml  py-cml-publish.yml  py-cml-release-tag.yml  py-cml-test.yml  py-cml.yml
ProjectPlan/: 00_Overview.md  Credentials_Inventory.md  CurrentIssues.md  Improvement_Report.md  Issues.md  Phase10_ObservabilityBenchmarking.md  Phase10_TestingDeployment.md  Phase11_HolisticMemory.md  Phase12_SeamlessIntegration.md  Phase13_CodeImprovements.md  Phase14_DocumentationUpdate.md  Phase1_Foundation.md  Phase2_LogitInterface.md  Phase2_SensoryWorkingMemory.md  Phase3_HippocampalStore.md  Phase4_NeocorticalStore.md  Phase4_SynapticInterface.md  Phase5_ControllerGatingUnit.md  Phase5_RetrievalSystem.md  Phase6_Reconsolidation.md  Phase7_Consolidation.md  Phase7_MemoryHierarchyCacheManagement.md  Phase8_ActiveForgetting.md  Phase9_RestAPI.md  ProjectPlan_Complete.md  ProjectStatus.md  UsageDocumentation.md
ProjectPlan/ActiveCML/: Phase10_ObservabilityBenchmarking.md  Phase1_Foundation_ModelAccessLayer.md  Phase2_LogitInterface.md  Phase3_ActivationInterface.md  Phase4_SynapticInterface.md  Phase5_ControllerGatingUnit.md  Phase6_MemoryEncodingPipeline.md  Phase7_MemoryHierarchyCacheManagement.md  Phase8_WeightAdaptationInterface.md  Phase9_IntegrationMigration.md  README.md
ProjectPlan/BaseCML/: BaseCMLStatus.md  CML_Audit_2026-03-06.md  ImplementationPlan.md  ImplementationPlan2.md  Issues.md  Models_Package_Audit_2026-03-06.md  PENDING_ISSUES.md  Packages_Audit_2026-03-06.md  RuleBasedExtractorsAndLLMReplacement.md  deep-research-report.md
ProjectPlan/CreatePackage/: CreatePackageStatus.md  Issues.md  Overview.md  Phase1_ProjectSetup.md  Phase2_CoreClient.md  Phase3_MemoryOperations.md  Phase4_EmbeddedMode.md  Phase5_AdvancedFeatures.md  Phase6_DeveloperExperience.md  Phase7_Testing.md  Phase8_DocumentationPublishing.md
ProjectPlan/CustomModel/: SLMReplacementReport.md  TrainingPerformanceReport.md
ProjectPlan/LocomoEval/: EvaluationPlan.md  RunEvaluation.md
artifacts/quality/: quality_test_results.json
docker/: Dockerfile  docker-compose.ci.yml  docker-compose.gpu.yml  docker-compose.test-key.yml  docker-compose.yml  entrypoint.sh  up.sh
docs/: api-versioning.md
evaluation/: .env.example  .gitignore  COMPARISON.md  EVALUATION_REPORT.md  LOCOMO_PLUS_EVAL_REPORT.md  README.md  __init__.py  deep-research-report.md  requirements.txt  short_eval_test.py
evaluation/locomo_plus/: README.md
evaluation/outputs_limit50/: locomo_plus_qa_cml_judge_summary.json  locomo_plus_qa_cml_judged.json  locomo_plus_qa_cml_predictions.json
evaluation/scripts/: compare_locomo_scores.py  compare_results.py  eval_locomo.py  eval_locomo_plus.py  generate_locomo_report.py  run_full_eval.py  validate_outputs.py
examples/: README.md  __init__.py  _shared.py  admin_dashboard.py  agent_integration.py  anthropic_tool_calling.py  api_curl_examples.sh  api_direct_minimal.py  async_example.py  async_usage.py  basic_usage.py  bulk_ingestion.py  chat_with_memory.py  chatbot_with_memory.py  embedded_mode.py  langchain_integration.py  memory_client.py  ollama_chat_test.py  ollama_chatbot_app.py  openai_tool_calling.py  quickstart.py  requirements.txt  session_scope.py  standalone_demo.py  streamlit_app.py
examples/openclaw_skill/: README.md  SKILL.md
migrations/: env.py
migrations/versions/: 001_initial_schema.py  002_dashboard_jobs.py  002_semantic_facts.py  003_add_memory_scoping.py  004_remove_scopes_holistic.py  005_event_log_scope_id.py  005_event_log_user_id_to_scope_id.py
scripts/: _shared.py  audit_and_fix_corrupt.py  backfill_neo4j.py  constraint_retrieval_probe.py  init_structure.py  models_artifact_probe.py  package_surface_probe.py  run_examples.py  test_memory_quality.py  update_readme_badges.py  validate_llm_endpoints.py  verify_celery_config.py  verify_constraint_flow.py  verify_neo4j_graph.py
src/: __init__.py  celery_app.py  main.py
src/api/: __init__.py  admin_routes.py  app.py  auth.py  dashboard_routes.py  dependencies.py  middleware.py  routes.py  schemas.py
src/consolidation/: __init__.py  clusterer.py  migrator.py  sampler.py  schema_aligner.py  summarizer.py  triggers.py  worker.py
src/core/: __init__.py  config.py  enums.py  env_file.py  exceptions.py  schemas.py  tenant_flags.py
src/dashboard/: package.json  vite.config.js
src/evaluation/: conflict_eval.py
src/extraction/: __init__.py  constraint_extractor.py  entity_extractor.py  fact_extractor.py  fact_span_adapter.py  local_unified_extractor.py  prospective_indexer.py  registry.py  relation_extractor.py  temporal_resolver.py  unified_write_extractor.py  write_time_facts.py
src/forgetting/: __init__.py  actions.py  compression.py  executor.py  interference.py  scorer.py  worker.py
src/memory/: __init__.py  conversation.py  knowledge_base.py  orchestrator.py  scratch_pad.py  seamless_provider.py  short_term.py  tool_memory.py
src/reconsolidation/: __init__.py  belief_revision.py  conflict_detector.py  labile_tracker.py  service.py
src/retrieval/: __init__.py  answer_processing.py  bm25_index.py  classifier.py  cross_encoder.py  hyde.py  (+6 more)
tests/: README.md  _lifecycle_err.txt  _lifecycle_tb.txt  _tb.txt  conftest.py
(+256 files in other folders)
