[tool.poetry]
name = "cognitive-memory-layer"
version = "0.1.0"
description = "Neuro-inspired memory system for LLMs with event sourcing and CQRS"
authors = []
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.32.0" }
pydantic = "^2.0"
sqlalchemy = { extras = ["asyncio"], version = "^2.0" }
asyncpg = "^0.30.0"
pgvector = "^0.3.0"
neo4j = "^5.0"
redis = "^5.0"
celery = "^5.4"
openai = "^1.0"
sentence-transformers = "^3.0"
tiktoken = "^0.8"
python-dotenv = "^1.0"
pydantic-settings = "^2.0"
structlog = "^24.0"
prometheus-client = "^0.21"

[tool.poetry.extras]
gemini = ["google-generativeai"]
claude = ["anthropic"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.24"
pytest-cov = "^5.0"
black = "^24.0"
ruff = "^0.8"
mypy = "^1.0"
httpx = "^0.28"
factory-boy = "^3.3"
faker = "^33.0"
alembic = "^1.14"
testcontainers = "^4.6"
psycopg2-binary = "^2.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false  # Too many false positives in existing code
warn_unused_ignores = true
disallow_untyped_defs = false  # Gradual typing approach
ignore_missing_imports = true  # Ignore missing stubs for third-party packages
show_error_codes = true
pretty = true

# Allow gradual typing - don't fail on pre-existing issues
[[tool.mypy.overrides]]
module = [
    "src.storage.*",
    "src.reconsolidation.*",
    "src.forgetting.*",
    "src.consolidation.*",
    "src.memory.neocortical.*",
    "src.api.dashboard_routes",
    "src.retrieval.*",
    "src.utils.*",
    "src.memory.orchestrator",
    "src.memory.working.manager",
]
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore:The @wait_container_is_ready decorator is deprecated:DeprecationWarning",
]
# Function-scoped event loop so async fixture teardown (db_session rollback, engine dispose)
# runs while the loop is still open, avoiding "Event loop is closed" errors.
# Requires pytest-asyncio >= 0.23
asyncio_default_fixture_loop_scope = "function"
